// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartAndTransactionItems /> check how renders should render everything with one seller and one cart item 1`] = `
<DocumentFragment>
  .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 7;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 > *:not(:last-child) {
  margin-right: 0;
}

.c5 {
  max-height: 7rem;
  min-width: 7rem;
  width: 7rem;
}

.c5 img {
  max-height: 7rem;
  max-width: 7rem;
  object-fit: cover;
}

.c1 {
  display: block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c10 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0.8rem;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.4rem;
}

.c11 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 2.2rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: calc(1.5 * 1.2rem) 0;
}

.c3:not(:last-child) {
  border-bottom: 1px solid #DADFE1;
}

.c3:last-child {
  padding-bottom: 0;
}

.c3 .photo-and-name {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 .name {
  font-size: 1.5rem;
  margin-left: 2.4rem;
  width: 31rem;
}

.c3 .name > a {
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c3 .name > a:hover {
  color: #06AD96;
}

.c3 .mobile-lower-row {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 .choose-quantity-box {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 .price-box {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 3.6rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .remove-icon {
  cursor: pointer;
  justify-self: right;
  margin-left: 1.2rem;
  padding: calc(0.5 * 0.8rem);
}

.c8 {
  background-color: #FAFAFA;
  border: 1px solid #777;
  border-radius: 1px;
  box-sizing: content-box;
  font-size: 1.5rem;
  outline: none;
  padding: 0.8rem 0;
  text-align: center;
  width: 5rem;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #DADFE1;
  width: 1.7rem;
  height: 1.7rem;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #777;
  width: 1.7rem;
  height: 1.7rem;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #F22613;
  width: 2.5rem;
  height: 2.5rem;
}

.c6 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 .button {
  background-color: transparent;
  border: 1px solid #777;
  border-radius: 1px;
  cursor: pointer;
  outline: none;
  padding: 0 1.2rem;
}

.c6 .button[disabled] {
  cursor: default;
}

.c6 .button.minus {
  border-right: 0;
}

.c6 .button.plus {
  border-left: 0;
}

.c2 {
  color: #06AD96 !important;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c2:hover {
  color: #009680 !important;
  cursor: pointer;
}

.c0 {
  padding: 2.4rem 0;
}

.c0:not(:last-child) {
  border-bottom: 1px solid #BFBFBF;
}

.c0:last-child {
  padding-bottom: 0;
}

@media only screen and (max-width:56.25em) {
  .c3 .mobile-lower-row {
    margin-top: 1.2rem;
    min-width: 100%;
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }

  .c3 .name {
    width: auto;
  }

  .c3 .remove-icon {
    margin-left: auto;
    padding-left: calc( 0.5 * 0.8rem + 0.8rem );
  }
}

@media only screen and (max-width:37.5em) {
  .c3 .name {
    margin-left: 1.2rem;
  }
}

<div
    class="c0"
    data-testid="CartAndTransactionItems-item"
  >
    <span
      class="c1"
      color=""
      display="block"
      overflow="visible"
      size="3"
      spacing="0px"
      transform=""
    >
      <span>
        seller 
      </span>
      <a
        data-testid="CartAndTransactionItems-item-seller-link"
      >
        <span
          class="c2"
        >
          user1
        </span>
      </a>
    </span>
    <div
      class="c3"
      data-testid="CartItem"
    >
      <div
        class="photo-and-name"
      >
        <a
          data-testid="CartItem-product-link-photo"
        >
          <div
            class="c4 c5"
            data-testid="ProductThumbnail"
            direction="row"
            height="7"
            spacing=""
            width="7"
            wrap="nowrap"
          >
            <img
              alt="product name"
              data-testid="ProductThumbnail-img"
              src="no-photo.png"
            />
          </div>
        </a>
        <span
          class="name"
        >
          <a
            data-testid="CartItem-product-link-name"
          >
            product name
          </a>
        </span>
      </div>
      <div
        class="mobile-lower-row"
      >
        <div
          class="choose-quantity-box"
        >
          <div
            class="c6"
          >
            <button
              aria-label="Decrease product quantity"
              class="button minus"
              data-testid="ChooseQuantity-minus-btn"
              disabled=""
              type="button"
            >
              <div
                class="c7"
                color="#DADFE1"
                data-testid="ChooseQuantity-minus-icon"
              >
                <svg>
                  minus.svg
                </svg>
              </div>
            </button>
            <input
              class="c8"
              data-testid="NumberInput-quantity"
              name="quantity"
              type="number"
              value="1"
            />
            <button
              aria-label="Increase product quantity"
              class="button plus"
              data-testid="ChooseQuantity-plus-btn"
              type="button"
            >
              <div
                class="c9"
                color=""
                data-testid="ChooseQuantity-plus-icon"
              >
                <svg>
                  plus.svg
                </svg>
              </div>
            </button>
          </div>
          <span
            class="c10"
            color=""
            data-testid="CartItem-available-quantity"
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            of 2
          </span>
        </div>
        <div
          class="price-box"
        >
          <span
            class="c11"
            color=""
            data-testid="CartItem-total-price"
            display="inline-block"
            overflow="visible"
            size="5"
            spacing="0px"
            transform=""
          >
            $2
          </span>
        </div>
      </div>
      <div
        class="c12 remove-icon"
        color="#F22613"
        data-testid="CartItem-trash-icon"
      >
        <svg>
          trash.svg
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CartAndTransactionItems /> check how renders should render everything with two sellers, each with one transaction item 1`] = `
<DocumentFragment>
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c3 > *:not(:last-child) {
  margin-right: 1.2rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > *:not(:last-child) {
  margin-right: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 > *:not(:last-child) {
  margin-right: 0;
}

.c4 {
  padding-top: 2.4rem;
}

.c4:last-child {
  padding-bottom: 0;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > *:not(:last-child) {
  margin-right: 0.8rem;
}

.c7 .name {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  font-size: 1.5rem;
}

.c7 .name > a {
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c7 .name > a:hover {
  color: #06AD96;
}

.c6 {
  max-height: 5rem;
  min-width: 5rem;
  width: 5rem;
}

.c6 img {
  max-height: 5rem;
  max-width: 5rem;
  object-fit: cover;
}

.c1 {
  display: block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c10 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.4rem;
}

.c11 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.7rem;
}

.c2 {
  color: #06AD96 !important;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c2:hover {
  color: #009680 !important;
  cursor: pointer;
}

.c0 {
  padding: 2.4rem 0;
}

.c0:not(:last-child) {
  border-bottom: 1px solid #BFBFBF;
}

.c0:last-child {
  padding-bottom: 0;
}

@media only screen and (max-width:56.25em) {
  .c7 {
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c7 > *:not(:last-child) {
    margin-right: 0;
    margin-bottom: 0.8rem;
  }

  .c7 .name {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

@media only screen and (max-width:56.25em) {
  .c9 {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

<div
    class="c0"
    data-testid="CartAndTransactionItems-item"
  >
    <span
      class="c1"
      color=""
      display="block"
      overflow="visible"
      size="3"
      spacing="0px"
      transform=""
    >
      <span>
        seller 
      </span>
      <a
        data-testid="CartAndTransactionItems-item-seller-link"
      >
        <span
          class="c2"
        >
          user1
        </span>
      </a>
    </span>
    <div
      class="c3 c4"
      data-testid="TransactionAndOrderProdItem"
      direction="row"
      spacing="2"
      width="100%"
      wrap="nowrap"
    >
      <a
        data-testid="TransactionAndOrderProdItem-product-link-photo"
      >
        <div
          class="c5 c6"
          data-testid="ProductThumbnail"
          direction="row"
          height="5"
          spacing=""
          width="5"
          wrap="nowrap"
        >
          <img
            alt="product name"
            data-testid="ProductThumbnail-img"
            src="no-photo.png"
          />
        </div>
      </a>
      <div
        class="c7"
      >
        <span
          class="name"
        >
          <a
            data-testid="TransactionAndOrderProdItem-product-link-name"
          >
            product name
          </a>
        </span>
        <div
          class="c8 c9"
          direction="row"
          spacing=""
          width="100%"
          wrap="nowrap"
        >
          <span
            class="c10"
            color="#777"
            data-testid="TransactionAndOrderProdItem-product-price-per-piece"
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            1 x $2
          </span>
          <span
            class="c11"
            color=""
            display="inline-block"
            overflow="visible"
            size="4"
            spacing="0px"
            transform=""
          >
            $2
          </span>
        </div>
      </div>
    </div>
  </div>
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
}

.c3 > *:not(:last-child) {
  margin-right: 1.2rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 5;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > *:not(:last-child) {
  margin-right: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c8 > *:not(:last-child) {
  margin-right: 0;
}

.c4 {
  padding-top: 2.4rem;
}

.c4:last-child {
  padding-bottom: 0;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > *:not(:last-child) {
  margin-right: 0.8rem;
}

.c7 .name {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  font-size: 1.5rem;
}

.c7 .name > a {
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c7 .name > a:hover {
  color: #06AD96;
}

.c6 {
  max-height: 5rem;
  min-width: 5rem;
  width: 5rem;
}

.c6 img {
  max-height: 5rem;
  max-width: 5rem;
  object-fit: cover;
}

.c1 {
  display: block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.5rem;
}

.c10 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #777;
  font-size: 1.4rem;
}

.c11 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  font-size: 1.7rem;
}

.c2 {
  color: #06AD96 !important;
  -webkit-transition: color 0.1s;
  transition: color 0.1s;
}

.c2:hover {
  color: #009680 !important;
  cursor: pointer;
}

.c0 {
  padding: 2.4rem 0;
}

.c0:not(:last-child) {
  border-bottom: 1px solid #BFBFBF;
}

.c0:last-child {
  padding-bottom: 0;
}

@media only screen and (max-width:56.25em) {
  .c7 {
    -webkit-align-items: start;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: start;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c7 > *:not(:last-child) {
    margin-right: 0;
    margin-bottom: 0.8rem;
  }

  .c7 .name {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

@media only screen and (max-width:56.25em) {
  .c9 {
    -webkit-flex: initial;
    -ms-flex: initial;
    flex: initial;
  }
}

<div
    class="c0"
    data-testid="CartAndTransactionItems-item"
  >
    <span
      class="c1"
      color=""
      display="block"
      overflow="visible"
      size="3"
      spacing="0px"
      transform=""
    >
      <span>
        seller 
      </span>
      <a
        data-testid="CartAndTransactionItems-item-seller-link"
      >
        <span
          class="c2"
        >
          user2
        </span>
      </a>
    </span>
    <div
      class="c3 c4"
      data-testid="TransactionAndOrderProdItem"
      direction="row"
      spacing="2"
      width="100%"
      wrap="nowrap"
    >
      <a
        data-testid="TransactionAndOrderProdItem-product-link-photo"
      >
        <div
          class="c5 c6"
          data-testid="ProductThumbnail"
          direction="row"
          height="5"
          spacing=""
          width="5"
          wrap="nowrap"
        >
          <img
            alt="product name"
            data-testid="ProductThumbnail-img"
            src="no-photo.png"
          />
        </div>
      </a>
      <div
        class="c7"
      >
        <span
          class="name"
        >
          <a
            data-testid="TransactionAndOrderProdItem-product-link-name"
          >
            product name
          </a>
        </span>
        <div
          class="c8 c9"
          direction="row"
          spacing=""
          width="100%"
          wrap="nowrap"
        >
          <span
            class="c10"
            color="#777"
            data-testid="TransactionAndOrderProdItem-product-price-per-piece"
            display="inline-block"
            overflow="visible"
            size="2"
            spacing="0px"
            transform=""
          >
            1 x $2
          </span>
          <span
            class="c11"
            color=""
            display="inline-block"
            overflow="visible"
            size="4"
            spacing="0px"
            transform=""
          >
            $2
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
